[package]
name = "controller"
version = "6.6.5"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.27", features = ["full"] }
rand = "0.8"
toml = "0.7"
serde = "1.0"
serde_derive = "1.0"
hex = "0.4"
tower = "0.4"
tracing = "0.1"
statig = { version = "0.3", features = ["async"] }
futures = "0.3"

crypto_sm = { git = "https://github.com/cita-cloud/crypto_sm", package = "crypto", optional = true }
crypto_eth = { git = "https://github.com/cita-cloud/crypto_eth", package = "crypto", optional = true }

cloud-util = { path = "../cloud-common-rs/cloud-util" }
cita_cloud_proto = { path = "../cloud-common-rs/cloud-proto" }

[patch."https://github.com/cita-cloud/cloud-common-rs"]
cloud-util = { path = "../cloud-common-rs/cloud-util" }
cita_cloud_proto = { path = "../cloud-common-rs/cloud-proto" }

[build-dependencies]
tonic-build = "0.9"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

[features]
default = ["sm"]
sm = ["crypto_sm"]
eth = ["crypto_eth"]
